--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -7,13 +7,21 @@ const { href } = Astro.props;
 ---
 
 <style is:global>
-  .card {
-    border: 1px solid var(--color-foreground);
+  a.card:link,
+  a.card:visited,
+  a.card:hover,
+  a.card:active {
+    padding-left: calc(var(--s1) / 2) !important;
+    padding-right: calc(var(--s1) / 2) !important;
+    padding-top: calc((var(--s1) / 2) - 0.125rem) !important;
+    padding-bottom: calc((var(--s1) / 2) + 0.125rem) !important;
+  }
+  a.card:link,
+  a.card:visited,
+  a.card:active {
+    color: var(--color-foreground);
+    border: 2px solid var(--color-foreground);
     background: none !important;
-    padding-left: calc(var(--s1) / 2);
-    padding-right: calc(var(--s1) / 2);
-    padding-top: calc((var(--s1) / 2) - 0.125rem);
-    padding-bottom: calc((var(--s1) / 2) + 0.125rem);
     box-shadow: var(--shadow1);
     transition: all var(--t2) ease-out;
     border-radius: var(--border-radius);
@@ -25,7 +33,6 @@ const { href } = Astro.props;
     background: none;
     box-shadow: var(--shadow2);
     transform: scale(1.01236);
-    color: var(--color-foreground);
   }
   .card div h2 {
     min-height: calc(3 * var(--s1));
