--- a/src/components/CardFooter.astro
+++ b/src/components/CardFooter.astro
@@ -14,6 +14,6 @@ const { href } = Astro.props;
   }
 </style>
 
-<footer class="card-footer">
+<div class="card-footer">
   <slot />
-</footer>
+</div>
