--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,78 +1,55 @@
 ---
-import Box from "./Box.astro";
-import Centre from "./Centre.astro";
+import Cover from "./Box.astro";
 import SocialContainer from "./SocialContainer.astro";
-import Social from "./Social.astro";
 ---
 
-<style>
-  p {
-    text-align: center;
-  }
-</style>
-
 <footer>
-  <Centre>
-    <SocialContainer>
-      <Social>
-        <a
-          href="https://twitter.com/davelovemartin"
-          rel="me"
-          aria-label="twitter"
+  <SocialContainer>
+    <a href="https://twitter.com/davelovemartin" rel="me">
+      <svg viewBox="0 0 512 512" role="presentation">
+        <path
+          d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
         >
-          <svg viewBox="0 0 512 512">
-            <path
-              d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
-            >
-            </path>
-          </svg>
-        </a>
-      </Social>
-      <Social>
-        <a
-          href="https://github.com/davelovemartin"
-          rel="me"
-          aria-label="github"
+        </path>
+      </svg>
+      Follow me on Twitter
+    </a>
+  </SocialContainer>
+  <SocialContainer>
+    <a href="https://mastodon.social/@davelovemartin" rel="me">
+      <svg viewBox="0 0 45 47" role="presentation">
+        <path
+          d="m22.3112347.00050525c7.4812701.01741916 10.7355156.48024328 11.6065254.60917875 5.26188.777726 9.70062 4.791306 10.38582 9.884196.1040317 1.0557377.1538589 2.2963732.1715876 3.558447l.0062919.6320667c.0184715 3.0563083-.1290032 6.0787137-.1304195 6.7601463 0 .2973-.04314 3.01182-.06036 3.29832-.4611 7.27746-4.99902 10.15134-9.76746 11.067-.06462.01938-.14004.03228-.21546.0474-3.0231.59028-6.26166.74754-9.33432.8337-.73476.01938-1.46736.01938-2.20212.01938-3.05508.00084-6.09948-.36078-9.0693-1.07718-.01578-.00408-.03222-.00438-.04812-.0009s-.03072.01062-.04332.02094c-.0126.01026-.02262.02334-.02916.03822-.0066.01488-.0096.03108-.0087.04734.084.96678.29406 1.91844.62484 2.8308.4116 1.05564 1.84878 3.59136 7.19256 3.59136 3.10512.0057 6.19998-.35592 9.22014-1.07718.0153-.00354.03126-.0036.04662-.00018s.02976.0102.04218.01992.02244.02208.02946.03618.01074.02958.01098.0453v3.57192c-.00054.01686-.00492.03336-.01278.0483-.0078.01488-.0189.02784-.03246.03792-.98688.7152-2.32926 1.12242-3.47556 1.4865-.50568.15942-1.01778.29946-1.53636.42012-4.7139 1.07358-9.63366.81396-14.20836-.74976-4.27283997-1.4994-8.63402997-5.17476-9.71140197-9.59124-.575346-2.3913-.980736-4.82028-1.213116-7.26882-.3361392-3.6861-.3641508-7.38084-.50851836-11.082-.10127304-2.58096-.04309478-5.39454.50205456-7.93242 1.1333958-5.153208 5.8048818-8.759616 10.92024177-9.515796.88776-.131415 2.55978-.609684 10.35348-.609684zm7.0944654 7.75509475c-2.562 0-4.50126.9867-5.79408 2.95794l-1.24974 2.09406-1.24758-2.09406c-1.29288-1.97124-3.23214-2.95794-5.79846-2.95794-2.21718 0-4.0035.77988-5.36525997 2.29872-1.32018 1.52244-1.98024 3.57624-1.98024 6.16146v12.65262h5.01191997v-12.2799c0-2.58522 1.08816-3.90372 3.26664-3.90372 2.409 0 3.61776 1.55976 3.61776 4.64052v6.72162h4.98396v-6.72162c0-3.08076 1.2066-4.64052 3.6156-4.64052 2.19138 0 3.26874 1.3185 3.26874 3.90372v12.2799h5.0140824v-12.65262c.0014376-2.58666-.6571824-4.64046-1.9758624-6.16146-1.36614-1.51884-3.1524-2.29872-5.36748-2.29872z"
         >
-          <svg viewBox="0 0 480 512">
-            <path
-              d="M186.1 328.7c0 20.9-10.9 55.1-36.7 55.1s-36.7-34.2-36.7-55.1 10.9-55.1 36.7-55.1 36.7 34.2 36.7 55.1zM480 278.2c0 31.9-3.2 65.7-17.5 95-37.9 76.6-142.1 74.8-216.7 74.8-75.8 0-186.2 2.7-225.6-74.8-14.6-29-20.2-63.1-20.2-95 0-41.9 13.9-81.5 41.5-113.6-5.2-15.8-7.7-32.4-7.7-48.8 0-21.5 4.9-32.3 14.6-51.8 45.3 0 74.3 9 108.8 36 29-6.9 58.8-10 88.7-10 27 0 54.2 2.9 80.4 9.2 34-26.7 63-35.2 107.8-35.2 9.8 19.5 14.6 30.3 14.6 51.8 0 16.4-2.6 32.7-7.7 48.2 27.5 32.4 39 72.3 39 114.2zm-64.3 50.5c0-43.9-26.7-82.6-73.5-82.6-18.9 0-37 3.4-56 6-14.9 2.3-29.8 3.2-45.1 3.2-15.2 0-30.1-.9-45.1-3.2-18.7-2.6-37-6-56-6-46.8 0-73.5 38.7-73.5 82.6 0 87.8 80.4 101.3 150.4 101.3h48.2c70.3 0 150.6-13.4 150.6-101.3zm-82.6-55.1c-25.8 0-36.7 34.2-36.7 55.1s10.9 55.1 36.7 55.1 36.7-34.2 36.7-55.1-10.9-55.1-36.7-55.1z"
-            >
-            </path>
-          </svg>
-        </a>
-      </Social>
-      <Social>
-        <a
-          href="https://www.linkedin.com/in/davelovemartin"
-          rel="me"
-          aria-label="linked in"
-        >
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256">
-            <g>
-              <path
-                d="M0 18C0 8 8 0 19 0h218c11 0 19 8 19 18v220c0 10-8 18-19 18H19c-11 0-19-8-19-18V18z"
-              >
-              </path>
-              <path
-                d="M78 214V99H39v115h39zM59 83c13 0 21-9 21-20s-8-20-21-20-22 9-22 20 9 20 21 20h1zm40 131h38v-64l2-9c2-7 9-14 19-14 14 0 20 10 20 26v61h38v-66c0-35-19-52-44-52-21 0-30 12-35 20V99H99v115z"
-                style="fill: var(--color-background)"
-              >
-              </path>
-            </g>
-          </svg>
-        </a>
-      </Social>
-    </SocialContainer>
-    <Box>
-      <p>
-        Built with <a href="https://astro.build">Astro</a> and hosted on <a
-          href="http://netlify.com"
-        >
-          Netlify
-        </a>
-      </p>
-      <p><small>&copy;2023 — davelovemartin</small></p>
-    </Box>
-  </Centre>
+        </path>
+      </svg>
+      Follow me on Mastodon
+    </a>
+  </SocialContainer>
+  <SocialContainer>
+    <a href="https://www.linkedin.com/in/davelovemartin" rel="me">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256">
+        <g>
+          <path
+            d="M0 18C0 8 8 0 19 0h218c11 0 19 8 19 18v220c0 10-8 18-19 18H19c-11 0-19-8-19-18V18z"
+          >
+          </path>
+          <path
+            d="M78 214V99H39v115h39zM59 83c13 0 21-9 21-20s-8-20-21-20-22 9-22 20 9 20 21 20h1zm40 131h38v-64l2-9c2-7 9-14 19-14 14 0 20 10 20 26v61h38v-66c0-35-19-52-44-52-21 0-30 12-35 20V99H99v115z"
+            style="fill: var(--color-background)"
+          >
+          </path>
+        </g>
+      </svg>
+      Connect on LinkedIn
+    </a>
+  </SocialContainer>
+  <p>
+    Built with <a href="https://astro.build">Astro</a> and hosted on <a
+      href="http://netlify.com"
+    >
+      Netlify
+    </a>
+  </p>
+  <small>&copy copyright 2022—23</small>
 </footer>
