tweaking header styles

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,6 +9,7 @@ import NavItem from "./NavItem.astro";
   header {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
   }
   .navigation ul {
     display: inline-flex;
