adding role=list to nav ul just in case

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,9 +1,8 @@
 ---
-import Cover from "./Box.astro";
 import SocialContainer from "./SocialContainer.astro";
 ---
 
-<footer>
+<footer role="contentinfo">
   <SocialContainer>
     <a href="https://twitter.com/davelovemartin" rel="me">
       <svg viewBox="0 0 512 512" role="presentation">
