--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -47,18 +47,20 @@ const { title, description, lastEdited, stage } =
     <meta name="twitter:creator" content="@davelovemartin" />
   </head>
   <body>
-    <Header />
-    <main>
-      <Centre>
-        <h1 class={title === "davelovemartin" ? "visually-hidden" : ""}>
-          {title}
-        </h1>
-        {lastEdited && <PageMeta lastEdited={lastEdited} stage={stage} />}
-        <slot />
-      </Centre>
-      <slot name="card-grid" />
-    </main>
-    <Footer />
+    <Cover>
+      <Header />
+      <main>
+        <Centre>
+          <h1 class={title === "davelovemartin" ? "visually-hidden" : ""}>
+            {title}
+          </h1>
+          {lastEdited && <PageMeta lastEdited={lastEdited} stage={stage} />}
+          <slot />
+        </Centre>
+        <slot name="card-grid" />
+      </main>
+      <Footer />
+    </Cover>
     <style is:global>
       :root {
         /* colour palette */
@@ -94,8 +96,13 @@ const { title, description, lastEdited, stage } =
       html {
         color: var(--color-foreground);
         background-color: var(--color-background);
-        font-size: 28px;
+        font-size: 20px;
         scroll-behavior: smooth;
+      }
+      @media only screen and (min-width: 512px) {
+        html {
+          font-size: 28px;
+        }
       }
       *,
       *::before,
@@ -307,41 +314,6 @@ const { title, description, lastEdited, stage } =
         position: absolute;
         white-space: nowrap;
         width: 1px;
-      }
-      main,
-      footer,
-      header {
-        padding: 1.5rem;
-      }
-      main,
-      footer {
-        display: flex;
-        flex-direction: column;
-        min-block-size: 100vh;
-      }
-
-      main,
-      header,
-      footer {
-        margin-block: 1.5rem;
-      }
-
-      main,
-      header,
-      footer {
-        margin-block-start: 0;
-      }
-
-      main,
-      header,
-      footer {
-        margin-block-end: 0;
-      }
-
-      main,
-      header,
-      footer {
-        margin-block: auto;
       }
     </style>
   </body>
