adding aria-current to current page

--- a/src/components/NavItem.astro
+++ b/src/components/NavItem.astro
@@ -36,7 +36,11 @@ const { currentPath, href, title } = Astro.props;
 </style>
 
 <div class="nav-item">
-  <a href={href} class={currentPath === href ? "active" : ""}>
+  <a
+    href={href}
+    class={currentPath === href ? "active" : ""}
+    aria-current={currentPath === href ? "page" : ""}
+  >
     <slot />
     {title}
   </a>
