--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,14 +10,18 @@ import Layout from "../layouts/Layout.astro";
   </p>
   <p>
     My empathy, curiosity and creativity means that I'm happiest connecting the
-    dots, coming up with novel ideas and innovating through <strong>experimentation</strong>,
+    dots, coming up with novel ideas and innovating through <strong>
+      experimentation
+    </strong>,
     <strong>iteration</strong> and <strong>rapid-prototyping</strong>.
   </p>
   <p>
     I have a Masters degree in <strong>
       Innovation and Applied Entrepreneurship
     </strong> and have solid experience of working with <strong>Agile</strong>, <strong
-    >Lean</strong>, and <strong>User Centered Design</strong>.
+    >
+      Lean
+    </strong>, and <strong>User Centered Design</strong>.
   </p>
   <p>
     I create highly <strong>accessible</strong>, <strong>performant</strong> and
