--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,6 +6,7 @@ import Header from "@components/Header.astro";
 import PageMeta from "@components/PageMeta.astro";
 
 import "@fontsource/comic-mono";
+import { ViewTransitions } from 'astro:transitions';
 
 interface Props {
   title?: string;
@@ -24,6 +25,7 @@ const { title, description, lastEdited, stage } =
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <title>{title || "davelovemartin"}</title>
+    <ViewTransitions />
     <meta
       name="description"
       content={description || "Exploring Innovation in Web Tech"}
