--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ import Layout from "../layouts/Layout.astro";
     </strong>, and <strong>User Centered Design</strong>.
   </p>
   <p>
-    I create highly <strong>accessible</strong>, <strong>performant</strong> and
+    I create <strong>accessible</strong>, <strong>performant</strong> and
     <strong>usable</strong> user interfaces by:
   </p>
   <ul>
