--- a/src/components/drawings/Experiments.astro
+++ b/src/components/drawings/Experiments.astro
@@ -5,12 +5,13 @@
   }
 </style>
 
-<svg
-  stroke-miterlimit="10"
-  style="fill-rule:nonzero;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;"
-  viewBox="0 0 32 48"
->
-  <g stroke="#242433" stroke-linecap="butt" stroke-width="1.24">
+<svg viewBox="0 0 48 48">
+  <g
+    stroke="#242433"
+    stroke-linecap="butt"
+    stroke-width="1.24"
+    transform="translate(12)"
+  >
     <path
       fill="none"
       d="M16.1968 13.3731c-2.2421 0-4.0533.54-4.0533 1.216 0 .319.4421.5928 1.1055.8106v11.9389L5.1792 41.3409c-1.4996 2.6082-.2817 4.722 2.7268 4.7166l16.2132-.0368c3.0085-.0054 4.1988-2.1139 2.6899-4.7166l-7.8487-13.5602V15.4366c.7843-.2232 1.3266-.4967 1.3266-.8475 0-.676-1.848-1.216-4.0902-1.216Z"
