--- a/src/pages/digital-garden.astro
+++ b/src/pages/digital-garden.astro
@@ -1,16 +1,12 @@
 ---
 import { getCollection } from "astro:content";
-import Card from "@components/Card.astro";
-import CardFooter from "@components/CardFooter.astro";
-import Grid from "@components/Grid.astro";
-import Stack from "@components/Stack.astro";
-import Acorn from "@drawings/Acorn.astro";
-import Sapling from "@drawings/Sapling.astro";
-import Tree from "@drawings/Tree.astro";
+import Posts from "@components/Posts.astro";
+import Post from "@components/Post.astro";
 import Layout from "@layouts/Layout.astro";
+import { sortPosts } from "@utilities/sortPosts";
 
 const posts = await getCollection("thoughts");
-const nonDraftPosts = posts.filter((post) => !post.data.draft);
+const nonDraftPosts = sortPosts(posts).filter((post) => !post.data.draft);
 ---
 
 <Layout title="Digital garden">
@@ -35,20 +31,15 @@ const nonDraftPosts = posts.filter((post) => !post.data.draft);
     than wait for the big reveal...
   </p>
 
-  <Grid slot="card-grid">
+  <Posts>
     {nonDraftPosts.map((post) => (
-      <Card href={`/thoughts/${post.slug}.html`}>
-        <Stack>
-          <h2>{post.data.title}</h2>
-          <p>{post.data.description}</p>
-          <CardFooter>
-            <small>Last tended: {post.data.lastEdited}</small>
-            {!post.data.stage || (post.data.stage === "note" && <Acorn />)}
-            {post.data.stage === "essay" && <Sapling />}
-            {post.data.stage === "reflection" && <Tree />}
-          </CardFooter>
-        </Stack>
-      </Card>
+      <Post
+        slug={`/thoughts/${post.slug}.html`}
+        title={post.data.title}
+        description={post.data.description}
+        lastEdited={post.data.lastEdited}
+        drawing={post.data.stage}
+      />
     ))}
-  </Grid>
+  </Posts>
 </Layout>
