--- a/src/components/Posts.astro
+++ b/src/components/Posts.astro
@@ -6,6 +6,7 @@
   }
 </style>
 
+{/* eslint-disable-next-line jsx-a11y/no-redundant-roles */}
 <ul role="list" class="posts stack">
   <slot />
 </ul>
