--- a/src/pages/digital-garden/self-management.astro
+++ b/src/pages/digital-garden/self-management.astro
@@ -1,7 +1,6 @@
 ---
 import { getCollection } from "astro:content";
 import type { CollectionEntry } from "astro:content";
-
 import Posts from "@components/Posts.astro";
 import Post from "@components/Post.astro";
 import Layout from "@layouts/Layout.astro";
@@ -9,7 +8,10 @@ import { sortPosts } from "@utilities/sortPosts";
 import TagFilterNav from "@components/TagFilterNav.astro";
 
 const posts = await getCollection("thoughts");
-const nonDraftPosts = sortPosts(posts).filter((post) => !post.data.draft);
+const filteredNonDraftPosts = sortPosts(posts).filter(
+  (post: CollectionEntry<"thoughts">) =>
+    !post.data.draft && post.data.tag === "self-management"
+);
 ---
 
 <Layout title="Digital garden">
@@ -34,10 +36,10 @@ const nonDraftPosts = sortPosts(posts).filter((post) => !post.data.draft);
     than wait for the big reveal...
   </p>
 
-  <TagFilterNav current="all" />
+  <TagFilterNav current="self-management" />
 
   <Posts>
-    {nonDraftPosts.map((post: CollectionEntry<"thoughts">) => (
+    {filteredNonDraftPosts.map((post: CollectionEntry<"thoughts">) => (
       <Post
         slug={`/thoughts/${post.slug}.html`}
         title={post.data.title}
