fix dimensions on svg container

--- a/src/components/Graphic.astro
+++ b/src/components/Graphic.astro
@@ -7,6 +7,8 @@
     background-size: 12px 12px;
     border: solid 1px var(--color-foreground);
     box-shadow: var(--shadow1);
+    height: 192px;
+    width: 192px;
   }
 </style>
 
