--- a/src/components/Tag.astro
+++ b/src/components/Tag.astro
@@ -2,14 +2,13 @@
   .tag {
     background-color: var(--color-background-heavy);
     /* border: 1px var(--color-foreground) solid; */
-    padding: 0 0.35rem 0.2rem 0.2rem;
+    padding: 0 0.35rem 0.2rem;
     margin: 0 0.5rem;
     border-radius: 0.25rem;
+    word-break: keep-all;
   }
 </style>
 
 <span class="tag">
-  <small>
-    #<slot />
-  </small>
+  <small>#<slot /></small>
 </span>
