--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -12,7 +12,7 @@ const { tag, slug, title, description, lastEdited, drawing } = Astro.props;
   }
 </style>
 
-<li class="post" data-tag={tag} data-stage={drawing}>
+<li class="post" data-stage={drawing}>
   <p>
     <a
       class="font-l"
