--- a/src/components/NavItem.astro
+++ b/src/components/NavItem.astro
@@ -7,12 +7,7 @@ interface Props {
 
 const { currentPath, href, title } = Astro.props;
 
-const checkIsCurrent = (currentPath, href) => {
-  if (currentPath.includes("digital-garden")) {
-    return currentPath.includes(href) ? "page" : "false";
-  }
-  return currentPath === href ? "page" : "false";
-};
+const checkIsCurrent = (currentPath, href) => currentPath === href ? "page" : "false";
 ---
 
 <style is:global>
