--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,7 +34,7 @@ import Layout from "../layouts/Layout.astro";
   </ul>
   <p>I champion inclusive design and web accessibility.</p>
   <p>
-    You can read <a href="/digital-garden">thoughts from my digital garden</a> and
+    You can read <a href="/digital-garden?tags=all&notes=false&essays=true&reflections=true">thoughts from my digital garden</a> and
     check out my <a href="/experiments">experiments</a>.
   </p>
 </Layout>
