--- a/src/components/Filters.astro
+++ b/src/components/Filters.astro
@@ -5,10 +5,6 @@ import Tree from "@drawings/Tree.astro";
 ---
 
 <style is:global>
-  #filters h2 {
-    display: inline;
-    margin-inline-end: var(--s-1);
-  }
   #filters label {
     margin-inline-end: var(--s1);
   }
@@ -23,7 +19,7 @@ import Tree from "@drawings/Tree.astro";
     align-items: center;
     gap: 1rem;
     flex-wrap: wrap;
-    margin-block-end: var(--s1);
+    margin-block-end: var(--s-1);
   }
   #filters div span {
     display: inline-flex;
@@ -37,8 +33,38 @@ import Tree from "@drawings/Tree.astro";
     height: 48px;
     display: inline;
   }
+
+  #filters button {
+    all: unset;
+    background-color: var(--color-background-heavy);
+    border: 1px var(--color-foreground) solid;
+    font-size: var(--s-1);
+    padding: 0.2rem 0.6rem;
+    border-radius: 0.25rem;
+    word-break: keep-all;
+    transition: all ease-in;
+    box-shadow: inset -1px -1px 1px var(--color-foreground);
+  }
+
+  #filters button:hover {
+    background-color: var(--color-highlight);
+  }
+
+  #filters button:focus {
+    outline: 2px solid var(--color-incidental);
+  }
+
+  #filters button:active {
+    box-shadow: none;
+  }
+
+  #filters button:disabled {
+    background-color: #ccc;
+    box-shadow: none;
+    border: none;
+  }
 </style>
-<hr />
+
 <div transition:name="tag-filter-name" transition:persist id="filters">
   <div id="stage">
     <span id="note-label">Notes (<Acorn />)</span>
@@ -47,44 +73,3 @@ import Tree from "@drawings/Tree.astro";
   </div>
 </div>
 
-<script is:inline>
-  
-  const toggleFilter = (stageName) => {
-    const posts = document.querySelectorAll(`[data-stage='${stageName}']`);
-    posts.forEach((post) => 
-    post.getAttribute("hidden")
-    ? post.removeAttribute("hidden")
-    : post.setAttribute("hidden", "true")
-    );
-  };
-  
-  const filterContainer = document.getElementById("filters");
-  const filterHeading = document.createElement("h2");
-  filterHeading.innerText = "Filter by:";
-  filterHeading.className = "font-l";
-  filterContainer.prepend(filterHeading);
-
-  const stageFilterContainer = document.getElementById("stage");
-
-  const stageNames = ["note", "essay", "reflection"];
-  stageNames.map((stageName) => {
-    const label = document.createElement("label");
-    label.setAttribute("for", `${stageName}Checkbox`);
-    const checkbox = document.createElement("input");
-    checkbox.type = "checkbox";
-    checkbox.name = `${stageName}Checkbox`;
-    checkbox.checked = stageName === "note" ? false : true;
-    toggleFilter("note");
-    checkbox.addEventListener("change", () => {
-      toggleFilter(stageName);
-      checkbox.checked ? !checkbox.checked : checkbox.checked;
-    });
-    const stageFilterSpan = document.getElementById(`${stageName}-label`);
-    stageFilterContainer.appendChild(label);
-    label.appendChild(checkbox);
-    label.appendChild(stageFilterSpan);
-  });
-
-  filterContainer.setAttribute("aria-role", "group");
-  filterContainer.setAttribute("aria-label", "filter controls");
-</script>
